增加一个模板引擎